# thumbsup

./: .claude.md  .gitignore  AM32_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  HARDWARE_BRINGUP_PLAN.md  HARDWARE_CONFIG_ANALYSIS.md  LICENSE  README.md  analyze_curves.py  forward.csv  main.py  pyproject.toml  reverse.csv
.github/workflows/: build.yml
config/am32/: README.md  weapon_esc_config.json
docs/: AM32_INTEGRATION.md  CALIBRATION_REPORT.md  CONTROL_ANALYSIS.md  CONTROL_IMPROVEMENTS_SUMMARY.md  DIAGNOSTIC_MODE.md  ESC_SPECS.md  HARDWARE_SETUP.md  MOTOR_LINEARIZATION.md  MOTOR_SPECS.md  QUICK_REFERENCE.md  TURNING_DYNAMICS.md  USER_MANUAL.md  am32_programming.md  bluepad32_integration.md  building.md  safety_procedures.md  wiring_guide.md
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/build_diagnostic/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/build_diagnostic/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
firmware/include/: am32_config.h  bluetooth.h  bluetooth_platform.h  calibration_mode.h  config.h  dhcp_server.h  diagnostic_mode.h  drive.h  dshot.h  error_codes.h  lwipopts.h  motor_control.h  motor_linearization.h  safety.h  safety_test.h  status.h  system_status.h  test_mode.h  trim_mode.h  weapon.h  web_server.h  ws2812.h
firmware/src/: am32_config.c  bluetooth.c  bluetooth_platform.c  calibration_mode.c  dhcp_server.c  diagnostic_mode.c  drive.c  dshot.c  dshot.pio  main.c  motor_control.c  motor_linearization.c  safety.c  safety_test.c  status.c  test_mode.c  test_wifi.c  trim_mode.c  weapon.c  web_server.c  ws2812.c  ws2812.pio
hardware/schematics/: antweight-robot.kicad_pro  antweight-robot.kicad_sch  thumbsup.kicad_pro  thumbsup.kicad_sch
tools/: am32_config.py  build.sh  build_modes.sh  flash.sh  monitor.py  motor_calibration.md
